--- a/package.json
+++ b/package.json
@@ -23,15 +23,14 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
+		"sass": "^1.53.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.6",
+		"svelte2tsx": "^0.5.11",
 		"tslib": "^2.3.1",
-		"typescript": "^4.7.2",
+		"typescript": "^4.7.4",
 		"vite": "^2.9.13"
 	},
-	"type": "module",
-	"dependencies": {
-		"sass": "^1.53.0"
-	}
+	"type": "module"
 }
