--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
-		"sass": "^1.53.0",
 		"svelte": "^3.49.0",
 		"svelte-check": "^2.8.0",
 		"svelte-preprocess": "^4.10.7",
@@ -32,5 +31,8 @@
 		"typescript": "^4.7.4",
 		"vite": "^2.9.14"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"sass": "^1.55.0"
+	}
 }
